--- a/Shop/ShopTARgv21.Core/ShopTARgv21.Core.csproj
+++ b/Shop/ShopTARgv21.Core/ShopTARgv21.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ServiceInterface\" />
+	  <Folder Include="Domain\" />
+	  <Folder Include="Dto\" />
+  </ItemGroup>
+
 </Project>
