--- a/Shop/ShopTargv21.ApplicationServices/ShopTargv21.ApplicationServices.csproj
+++ b/Shop/ShopTargv21.ApplicationServices/ShopTargv21.ApplicationServices.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\ShopTARgv21.Core\ShopTARgv21.Core.csproj" />
+    <ProjectReference Include="..\ShopTARgv21.Data\ShopTARgv21.Data.csproj" />
   </ItemGroup>
 
 </Project>
