--- a/Shop/ShopTARgv21.Core/ShopTARgv21.Core.csproj
+++ b/Shop/ShopTARgv21.Core/ShopTARgv21.Core.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
 	  <Folder Include="Domain\" />
-	  <Folder Include="Dto\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
