Add files and methods for adding pictures in database

--- a/Shop/Shop/Shop.csproj
+++ b/Shop/Shop/Shop.csproj
@@ -20,5 +20,9 @@
     <ProjectReference Include="..\ShopTARgv21.Data\ShopTARgv21.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\multipleFileUpload\" />
+  </ItemGroup>
+
 
 </Project>
