--- a/Shop/ShopTARgv21.Data/ShopTARgv21.Data.csproj
+++ b/Shop/ShopTARgv21.Data/ShopTARgv21.Data.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\ShopTARgv21.Core\ShopTARgv21.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
