Created and finished EmailService

--- a/Shop/Shop/appsettings.json
+++ b/Shop/Shop/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "EmailHost": "smpt.gmail.com",
+  "EmailUsername": "",
+  "Email": "your email",
+  "Password": "your password", //password for gmail you have to generate on your gmail account (your usual password does not work for API)
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TARgv21Shop;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
