--- a/Shop/ShopTARgv21.SpaceshipTest/ShopTARgv21.SpaceshipTest.csproj
+++ b/Shop/ShopTARgv21.SpaceshipTest/ShopTARgv21.SpaceshipTest.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.11" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
