--- a/Shop/Shop/appsettings.json
+++ b/Shop/Shop/appsettings.json
@@ -3,7 +3,7 @@
   "EmailUsername": "",
   "Email": "your email",
   "Password": "your password", //password for gmail you have to generate on your gmail account (your usual password does not work for API)
-
+  //see more about gmail password for API here: https://www.youtube.com/watch?v=lk5dhDzfzsU
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TARgv21Shop;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
